# codeeditor

./: CMakeLists.txt  codeeditor.cpp  codeeditor.hpp  codeeditor.pro  codeeditor.py  codeframe.cpp  codeframe.hpp  codeframe_p.hpp  main.cpp
src/: CMakeLists.txt  config.h.in  main.cpp
src/codeframe/: CMakeLists.txt  codeframe.cpp  codeframe.hpp  main.cpp
